import com.sun.security.auth.module.UnixSystem
import dev.lukebemish.larder.buildtooling.JLinkTask

plugins {
    id 'java'
    id 'build-logic-conventions'
    id 'dev.lukebemish.javac-post-processor'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

group = 'dev.lukebemish'
version = '0.1.0'

def dashboardProdDirectory = file("dashboard/dist")
def indicesProdDirectory = file("indices/dist")

def assumeNpmPrebuilt = providers.gradleProperty("dev.lukebemish.larder.buildtooling.assume-npm-prebuilt")

tasks.register("npmBuildProd", Exec) {
    executable = file("generate.sh")
    environment("LARDER_ENV", "prod")
    outputs.dirs(dashboardProdDirectory, indicesProdDirectory)
    inputs.files(
        "indices/package-lock.json", "indices/package.json", "indices/postcss.config.mjs",
        "dashboard/package-lock.json", "dashboard/package.json", "dashboard/tsconfig.json", "dashboard/index.html", "dashboard/vite.config.ts"
    )
    inputs.dir("indices/src")
    inputs.dir("dashboard/src")

    if (assumeNpmPrebuilt.isPresent() && (assumeNpmPrebuilt.get() as boolean)) {
        enabled = false
    }
}

configurations {
    dependencyScope("application")
    resolvable("applicationClasspath") {
        extendsFrom application
        attributes.addAllLater(runtimeClasspath.attributes)
    }
}

tasks.named("jar", Jar) {
    from(fileTree(dashboardProdDirectory)) {
        into("dev/lukebemish/larder/dashboard")
    }
    from(fileTree(indicesProdDirectory)) {
        into("dev/lukebemish/larder/indices")
    }
    // Excluded due to runtime impl generation
    exclude "dev/lukebemish/larder/api/Locations.class"
    if (!assumeNpmPrebuilt.isPresent() || !(assumeNpmPrebuilt.get() as boolean)) {
        dependsOn tasks.npmBuildProd
    }
}

dependencies {
    compileOnly(libs.jspecify)

    implementation(libs.javalin.core)
    annotationProcessor(libs.javalin.openapi.processor)
    implementation(libs.javalin.openapi.plugin)
    implementation(libs.javalin.swagger.plugin)
    implementation(libs.postgresql)
    implementation(libs.jackson.databind)
    implementation(libs.javauuidgenerator)
    implementation(libs.jsonata4java)

    implementation(libs.scribejava.apis)
    implementation(libs.jjwt.api)
    runtimeOnly(libs.jjwt.impl)
    runtimeOnly(libs.jjwt.jackson)

    implementation(libs.pebble)

    implementation(libs.slf4j.api)
    runtimeOnly(libs.slf4j.simple)

    annotationProcessor(project(":processor"))
    annotationProcessor(libs.polymorphicsignatures)
    compileOnly(libs.polymorphicsignatures)
    implementation(libs.polymorphicsignatures) {
        capabilities {
            requireFeature("utilities")
        }
    }

    application(project(":"))
}

modularize {
    uses["jjwt.impl"] = [
        "io.jsonwebtoken.io.Deserializer",
        "io.jsonwebtoken.io.Serializer"
    ]
}

def modulesToAdd = [
    "jjwt.impl",

    // npm webjars, jdeps doesn't create deps on these
    "swagger.ui"
]

tasks.named('compileJava', JavaCompile) {
    javacPostProcessor.plugins.add('dev.lukebemish.polymorphic-signatures')
    javacPostProcessor.plugins.add('dev.lukebemish.larder.processor.orm')
    modularity.inferModulePath = true

    options.javaModuleVersion = project.version.toString()
    options.javaModuleMainClass = 'dev.lukebemish.larder.Larder'
}


tasks.register("jlink", JLinkTask) {
    javaCompiler = javaToolchains.compilerFor {
        languageVersion = JavaLanguageVersion.of(25)
        vendor = JvmVendorSpec.AMAZON
    }
    modulePath.from(configurations.applicationClasspath)
    mainModule = "dev.lukebemish.larder"
    imageName = project.name
    destinationDirectory = layout.buildDirectory.dir("jlink")
    addModules = modulesToAdd
}

def testEnvMap = [
    LARDER_ENV: "dev",
    LARDER_DB_HOST: "localhost",
    LARDER_DB_PORT: "5432",
    LARDER_DB_NAME: "larder",
    LARDER_DB_USER: "larder",
    LARDER_DB_PASSWORD: "larder",

    LARDER_HOST: "http://localhost:8786",
    LARDER_PORT: "8786",

    LARDER_OIDC_ISSUER: "http://localhost:8282",
    LARDER_OIDC_CLIENT_ID: "larder",
    LARDER_OIDC_CLIENT_SECRET: "cYKjUGzbO4-cdCbme02Gksq934zldTym41ozzrnVjY0",

    LARDER_OIDC_ROLE_ADMIN: "\"ADMIN\" in userinfo.roles",

    LARDER_S3_REGION: "",
    LARDER_S3_ACCESS_KEY_ID: "minioadmin",
    LARDER_S3_SECRET_ACCESS_KEY: "minioadmin",
    LARDER_S3_ENDPOINT: "http://localhost:9000",

    LARDER_FILESYSTEM_BACKEND_LOCATIONS: "./dev-filesystem-backends.json"
]

def testSysPropsMap = [
    "org.slf4j.simpleLogger.log.dev.lukebemish.larder.OIDCAuthenticator": "DEBUG"
]

tasks.register("stopDevDocker", Exec) {
    def system = new UnixSystem()
    environment([
        "MY_UID": system.uid,
        "MY_GID": system.gid,
    ])
    commandLine("docker", "compose", "-f", "docker-compose.dev.yml", "down")
    workingDir = layout.projectDirectory
    outputs.upToDateWhen { false }
}

tasks.register("startDevDocker", Exec) {
    def system = new UnixSystem()
    environment([
        "MY_UID": system.uid,
        "MY_GID": system.gid,
    ])
    commandLine("docker", "compose", "-f", "docker-compose.dev.yml", "up", "--remove-orphans", "--detach")
    workingDir = layout.projectDirectory
    outputs.upToDateWhen { false }
    mustRunAfter tasks.stopDevDocker // Prevents anything depending on this from seeing invalid state
}

tasks.register("testDev", JavaExec) {
    environment(testEnvMap)
    systemProperties(testSysPropsMap)
    workingDir = layout.projectDirectory
    mainModule = "dev.lukebemish.larder"
    classpath(configurations.applicationClasspath)
    javaLauncher = javaToolchains.launcherFor {
        it.languageVersion = JavaLanguageVersion.of(25)
    }
    modulesToAdd.each {
        jvmArgs("--add-modules", it)
    }
    dependsOn tasks.startDevDocker
    outputs.upToDateWhen { false }
}

tasks.register("printSchemas", JavaExec) {
    workingDir = layout.projectDirectory
    mainClass = "dev.lukebemish.larder.schema.Schema"
    classpath(configurations.applicationClasspath)
    javaLauncher = javaToolchains.launcherFor {
        it.languageVersion = JavaLanguageVersion.of(25)
    }
    outputs.upToDateWhen { false }
}

tasks.register("testJlink", JavaExec) {
    environment(testEnvMap)
    systemProperties(testSysPropsMap)
    workingDir = layout.projectDirectory
    mainModule = "dev.lukebemish.larder"
    executable = layout.buildDirectory.file("jlink/larder/bin/java").get()
    dependsOn tasks.startDevDocker
    dependsOn tasks.jlink
    outputs.upToDateWhen { false }
}

